fix nav on mobile

--- a/assets/sass/components/navigation.scss
+++ b/assets/sass/components/navigation.scss
@@ -20,6 +20,9 @@
     }
     .nav-item {
         max-width: 20%;
+        @media (max-width: 600px) {
+            max-width: 100%;
+        }
     }
     @media (max-width: 600px) {
         position: relative;
